Rewrite to Java 8