@@ -2,6 +2,7 @@ package com.antigenomics.ilrfilter;
 
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.*;
@@ -9,9 +10,9 @@ import static org.junit.Assert.*;
 public class HashMatcherFactoryTest {
     @Test
     public void create() {
-        var fact = new HashMatcherFactory<String>(6, 1);
+        HashMatcherFactory fact = new HashMatcherFactory<String>(6, 1);
         assertEquals(6 * 3 * 2 /*muts*/ + 2 /*orig +/-strand */, fact.create(
-                List.of(new SequenceWithPayloadImpl("AAAAAA", "1"))
+                Arrays.asList(new SequenceWithPayloadImpl("AAAAAA", "1"))
         ).getKmers().size());
     }
 }
