@@ -13,31 +13,31 @@ import java.util.List;
 public class HashMatcherTest {
     @Test
     public void match() {
-        var shm = new HashMatcher<>(Arrays.asList(
+        HashMatcher shm = new HashMatcher<>(Arrays.asList(
                 new SequenceWithPayloadImpl<>("AACGAA", "1"),
                 new SequenceWithPayloadImpl<>("AAAAAA", "2")),
                 6, 1);
         System.out.println(shm.getKmers().size());
-        Assert.assertEquals(List.of("2"), shm.match(new NucleotideSequence("AAATAA")));
-        Assert.assertEquals(List.of("1", "2"), shm.match(new NucleotideSequence("AAAGAA")));
+        Assert.assertEquals(Arrays.asList("2"), shm.match(new NucleotideSequence("AAATAA")));
+        Assert.assertEquals(Arrays.asList("1", "2"), shm.match(new NucleotideSequence("AAAGAA")));
         Assert.assertEquals(Collections.emptyList(), shm.match(new NucleotideSequence("AACGTT")));
     }
 
     @Test
     public void getKmers() {
-        var shm = new HashMatcher<>(Collections.emptyList(), 3, 0);
+        HashMatcher shm = new HashMatcher<>(Collections.emptyList(), 3, 0);
         shm.put(new NucleotideSequence("TCG"), new Object(), 0);
         shm.put(new NucleotideSequence("CGA"), new Object(), 0);
         System.out.println(shm.getKmers());
-        Assert.assertEquals(new HashSet<>(List.of(new NucleotideSequence("TCG"),
+        Assert.assertEquals(new HashSet<>(Arrays.asList(new NucleotideSequence("TCG"),
                 new NucleotideSequence("CGA"))), shm.getKmers());
 
-        var shm2 = new HashMatcher<>(Collections.emptyList(), 3, 0);
+        HashMatcher shm2 = new HashMatcher<>(Collections.emptyList(), 3, 0);
         shm2.put(new NucleotideSequence("TCG"), new Object(), 1);
         System.out.println(shm2.getKmers());
         Assert.assertEquals(3 * 3 + 1, shm2.getKmers().size());
 
-        var shm3 = new HashMatcher<>(Collections.emptyList(), 3, 0);
+        HashMatcher shm3 = new HashMatcher<>(Collections.emptyList(), 3, 0);
         shm3.put(new NucleotideSequence("TCG"), new Object(), 2);
         System.out.println(shm2.getKmers());
         Assert.assertEquals(3 * 3 + 1, shm2.getKmers().size());
@@ -45,7 +45,7 @@ public class HashMatcherTest {
 
     @Test
     public void getKmer() {
-        var shm = new HashMatcher<>(Collections.emptyList(), 4, 0);
+        HashMatcher shm = new HashMatcher<>(Collections.emptyList(), 4, 0);
 
         long kmer = shm.getKmer(new NucleotideSequence("ACGTACGTAGC"));
         print(kmer);
@@ -54,7 +54,7 @@ public class HashMatcherTest {
 
     @Test
     public void getSequence() {
-        var shm = new HashMatcher<>(Collections.emptyList(), 4, 0);
+        HashMatcher shm = new HashMatcher<>(Collections.emptyList(), 4, 0);
 
         Assert.assertEquals(new NucleotideSequence("ACGT"), shm.getSequence(39L));
     }
