@@ -4,6 +4,7 @@ import com.milaboratory.core.sequence.NucleotideSequence;
 import com.milaboratory.core.tree.TreeSearchParameters;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -13,10 +14,10 @@ public class TreeMatcherTest {
 
     @Test
     public void getKmers() {
-        var tm = new TreeMatcher<>(List.of(
+        TreeMatcher tm = new TreeMatcher<>(Arrays.asList(
                 new SequenceWithPayloadImpl<>(new NucleotideSequence("CATGTC"), "1"),
                 new SequenceWithPayloadImpl<>(new NucleotideSequence("AAGCAT"), "2")),
-                5, new TreeSearchParameters(0,0,0)
+                5, new TreeSearchParameters(0, 0, 0)
         );
 
         assertEquals(8, tm.getKmers().size());
@@ -24,13 +25,13 @@ public class TreeMatcherTest {
 
     @Test
     public void match() {
-        var tm = new TreeMatcher<>(List.of(
+        TreeMatcher tm = new TreeMatcher<>(Arrays.asList(
                 new SequenceWithPayloadImpl<>(new NucleotideSequence("CATATGTCGATTC"), "1"),
                 new SequenceWithPayloadImpl<>(new NucleotideSequence("ATAAACTGAGCAT"), "2")),
-                6, new TreeSearchParameters(1,0,0)
+                6, new TreeSearchParameters(1, 0, 0)
         );
 
-        assertEquals(List.of("1"), tm.match(new NucleotideSequence("TGTCAA")));
+        assertEquals(Arrays.asList("1"), tm.match(new NucleotideSequence("TGTCAA")));
         assertEquals(Collections.emptyList(), tm.match(new NucleotideSequence("AGTCAA")));
     }
 }
